re PR c/42262 (internal compiler error: in set_designator, at c-typeck.c:5771)

PR c/42262
c:
	* c-typeck.c (process_init_element): Do not treat a string as
	initializing a whole array when used with a designator for an
	individual element.

testsuite:
	* gcc.dg/c99-init-5.c, gcc.dg/c99-init-6.c: New tests.

From-SVN: r205543